--- a/mud/pom.xml
+++ b/mud/pom.xml
@@ -46,6 +46,14 @@
             </execution>
           </executions>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>1.6.0</version>
+          <configuration>
+            <mainClass>fr.univ_orleans.iut45.mud.App</mainClass>
+          </configuration>
+        </plugin>
     </plugins>
   </build>
 </project>
