--- a/mud/pom.xml
+++ b/mud/pom.xml
@@ -14,10 +14,16 @@
       <version>4.13.2</version>
       <scope>JeuxOlympiqueTest</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.33</version>
+        <groupId>com.mysql</groupId>
+        <artifactId>mysql-connector-j</artifactId>
+        <version>8.4.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>22.0.1</version>
     </dependency>
   </dependencies>
   <properties>
@@ -55,6 +61,14 @@
           <mainClass>fr.univ_orleans.iut45.mud.JeuxOlympique</mainClass>
         </configuration>
       </plugin>
+      <plugin>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-maven-plugin</artifactId>
+          <version>0.0.8</version>
+          <configuration>
+              <mainClass>app.App</mainClass>
+          </configuration>
+        </plugin>
     </plugins>
   </build>
 </project>
