--- a/mud/pom.xml
+++ b/mud/pom.xml
@@ -34,6 +34,24 @@
         <version>5.11.0-M2</version>
         <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-graphics -->
+    <!-- <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-graphics</artifactId>
+        <version>23-ea+22</version>
+    </dependency> -->
+    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
+    <!-- <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-fxml</artifactId>
+        <version>23-ea+22</version>
+    </dependency> -->
+    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
+    <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-fxml</artifactId>
+        <version>22</version>
+    </dependency>
   </dependencies>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -55,7 +73,7 @@
             <configuration>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>fr.univ_orleans.iut45.mud.JeuxOlympique</mainClass>
+                  <mainClass>fr.univ_orleans.iut45.mud.IHM.src.JeuxOlympique</mainClass>
                 </transformer>
               </transformers>
             </configuration>
@@ -64,10 +82,10 @@
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
+		    <artifactId>exec-maven-plugin</artifactId>
         <version>1.6.0</version>
         <configuration>
-          <mainClass>fr.univ_orleans.iut45.mud.JeuxOlympique</mainClass>
+          <mainClass>fr.univ_orleans.iut45.mud.IHM.src.JeuxOlympique</mainClass>
         </configuration>
       </plugin>
       <plugin>
@@ -75,7 +93,7 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-          <mainClass>fr.univ_orleans.iut45.mud.JeuxOlympique</mainClass>
+          <mainClass>fr.univ_orleans.iut45.mud.others.JeuxOlympique</mainClass>
         </configuration>
       </plugin>
       <plugin>
